--- a/src/content/blog/using-mdx.mdx
+++ b/src/content/blog/using-mdx.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Using MDX'
+title: 'Using MDX ☕️'
 description: 'Lorem ipsum dolor sit amet'
 pubDate: 'Jun 01 2024'
 heroImage: '../../assets/coffee-illustration-different-coffee-sizes-and-typesjpg.jpg'
